# SatorArepo

./: .gitignore  GENERATIVE_VS_MASKED.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  huggingface.yml
deploy/huggingface/: .dockerignore  Dockerfile
docs/: Makefile  api.rst  authors.rst  conf.py  evidence_and_windows.rst  experiment_lineage.rst  feature_space.rst  glossary.rst  index.rst  limitations.rst  mathematical_engine.rst  method.rst  mixture_of_experts.rst  overview.rst  publishing.rst  socratic_review.rst  training_and_evaluation.rst  ui_api.rst
src/arepo/: __init__.py  __main__.py  calibration.py  core.py  corpus.py  document_report.py  download.py  embedding_context.py  evaluate_moe.py  evidence.py  expert_selection.py  expert_sources.py  greedy_expert_selection.py  guardrail_evaluation.py  mixture_experts.py  regime.py  renorm_experiments.py  stats.py  threshold_experiments.py  training_data.py  utils.py  web.py
src/arepo/data/: educational_explanatory.jsonl  gpt_text_001.txt  gpt_text_002.txt  gpt_text_003.txt  gpt_text_004.txt  gpt_text_005.txt  gpt_text_006.txt  gpt_text_007.txt  gpt_text_008.txt  gpt_text_009.txt  gpt_text_010.txt  gpt_text_011.txt  gpt_text_012.txt  historic_civic.jsonl  historic_civic_expanded.jsonl  nat_text_001.txt  nat_text_002.txt  nat_text_003.txt  nat_text_004.txt  nat_text_005.txt  nat_text_006.txt  nat_text_007.txt  nat_text_008.txt  nat_text_009.txt  nat_text_010.txt  nat_text_011.txt  nat_text_012.txt  public_domain_narrative.jsonl
src/arepo/models/: long_guardrail_4d_baseline_w120.npz
src/arepo/templates/: index.html
tests/: README.md  conftest.py  test_integration.py  test_reproducibility.py  test_unit.py  test_web.py
